@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods


title Domain Model

class Employee {
    employee id
}

class Job {
    job id
    job title
}

class Skills {
    skill id
    skill description
}

class HRM {
    hrm id
    username
    password
}

class Collaborator {
    collaborator id
    name
    birthdate
    admission date
    address
    contact info
    taxpayer
}

Employee "1" -- "1" Job : has >
Employee "1" -- "1..*" Skills : has >
HRM "1" - "1..*" Collaborator : registers and manages >
HRM "1" - "1..*" Job : registers >
HRM "1" - "1..*" Skills : registers >

Collaborator "1" - "1" Employee : is a >


@enduml
